<resources>
    <string name="app_name">PetShop</string>
    <string name="hint_edtusername">Nhập tên đăng nhập</string>
    <string name="hint_edtpassword">Nhập mật khẩu</string>
    <string name="tv_forgotpass">Quên mật khẩu?</string>
    <string name="tv_username">Tên đăng nhập</string>
    <string name="tv_password">Mật khẩu</string>
    <string name="name_btnlogin">Đăng nhập</string>
    <string name="tv_email">Email</string>
    <string name="hint_email">Nhập Email</string>
    <string name="tv_singup">Bạn chưa có tài khoản?</string>
    <string name="tv_singup2"><u>Đăng ký</u></string>
    <string name="tv_register"><u>Đăng ký</u></string>
    <string name="login_empty">Tên đăng nhập và mật khẩu không được bỏ trống</string>
    <string name="user_illegal">Incorrect username format</string>
    <string name="login_success">Logged in successfully!</string>
    <string name="login_error">Xảy ra lổi server</string>
    <string name="wrong_account">Tên đăng nhập hoặc mật khẩu không đúng</string>
    <string name="tokendie">Phiên bản hết hạn. Vui lòng đăng nhập lại</string>
    <string name="login_required">Vui lòng đăng nhập để tiếp tục</string>
    <string name="RgtEmpty">Tên đăng nhập và mật khẩu không được bỏ trống</string>
    <string name="AccountExist">Tên đăng nhập đã tồn tại</string>
    <string name="NotFindRoleId">Không tìm thấy mã quyền</string>
    <string name="AddAuthSuccess">Đăng ký tài khoản thành công</string>
    <string name="AddAuthError">Đăng ký tài khoản thất bại</string>
    <string name="UserIllegal">Tên đăng nhập tối thiểu tám ký tự, ít nhất một chữ cái và một số</string>
    <string name="PassIllegal">Mât khẩu tối thiểu tám ký tự, ít nhất một chữ cái viết hoa, một chữ cái viết thường và một số</string>
    <string name="pf_name">Họ và tên</string>
    <string name="pf_title">Cập nhật hồ sơ</string>
    <string name="pf_hintName">Nhập họ và tên</string>
    <string name="pf_birth">Ngày sinh</string>
    <string name="pf_hintBirth">Chọn ngày sinh</string>
    <string name="pf_address">Địa chỉ</string>
    <string name="pf_hintAddress">Nhập địa chỉ</string>
    <string name="pf_taxCode">Mã số thuế</string>
    <string name="pf_hintTaxCode">Nhập mã số thuế</string>
    <string name="pf_male">Nam</string>
    <string name="pf_female">Nữ</string>
    <string name="pf_gender">Giới tính</string>
    <string name="pf_phone">Số điện thoại</string>
    <string name="pf_hintPhone">Nhập số điện thoại</string>
    <string name="pf_btnSave">Lưu</string>
    <string name="error_empty">Vui lòng không bỏ trống các thông tin</string>
    <string name="PhoneIllegal">Số điện thoại không hợp lệ</string>
    <string name="EmailIllegal">Email không hợp lệ</string>
    <string name="PhoneExist">Số điện thoại này đã được sử dụng</string>
    <string name="EmailExist">Email này đã được sử dụng</string>
    <string name="UpdateError">Cập nhật hồ sơ thất bại</string>
    <string name="AddProfileSucces">Cập nhật hồ sơ thành công</string>
    <string name="action_home">Trang chủ</string>
    <string name="action_search">Danh mục</string>
    <string name="action_cart">Giỏ hàng</string>
    <string name="action_account">Tài khoản</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_store">Search Store</string>
    <string name="prouduct_type">Loại sản phẩm</string>
    <string name="product">Sản phẩm</string>
    <string name="find_productType">Tìm kiếm theo tên loại sản phẩm</string>
    <string name="find_product">Tìm kiếm theo tên sản phẩm</string>
    <string name="find">Tìm kiểm</string>
    <string name="price">Price</string>
    <string name="out_of_stock">Hết hàng</string>
    <string name="tv_proDetail">Product Detail</string>
    <string name="tv_brand">Thương hiệu:</string>
    <string name="tv_brandname">ABC</string>
    <string name="tv_describe">Mô tả</string>
    <string name="tv_review">Đánh giá</string>
    <string name="tv_body">Nội dung</string>
    <string name="tv_addToCard">Thêm vào giỏ hàng</string>
    <string name="tv_num">1</string>
    <string name="tv_numPro">Sô lượng:</string>
    <string name="proDeltologin">Đăng nhập để thêm vào giỏ hàng</string>
    <string name="checkout">Thanh toán</string>
    <string name="tv_checkOut2">Thanh toán</string>
    <string name="tv_infor">Thông tin đặt hàng</string>
    <string name="tv_product_checkout">Sản phẩm</string>
    <string name="tv_name">Họ tên người nhận</string>
    <string name="tv_phone">Số điện thoại người nhận</string>
    <string name="tv_address">Địa chỉ người nhận</string>
    <string name="tv_email_receive">Email người nhận</string>
    <string name="tv_delivery_method">Hình thức vận chuyễn:</string>
    <string name="tv_delivery_method2">Giao hàng nhanh</string>
    <string name="tv_delivery_method3">Giao hàng trong 2h</string>
    <string name="tv_mass_pro">Tổng khối lượng sản phẩm:</string>
    <string name="tv_pro_price">Tiền sản phẩm:</string>
    <string name="tv_transport_fee">Phí giao hàng:</string>
    <string name="tv_price">Price</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_productName">Product Name</string>
    <string name="tv_cancel">Cancel</string>
    <string name="tv_payType">Chọn phương thức thanh toán</string>
    <string name="tv_checkout_success">Đặt hàng thành công</string>
    <string name="tv_checkout_fail">Đặt hàng thất bại</string>
    <string name="tv_dateReceive">Ngày nhận dự kiến</string>
    <string name="hint_dateReceive">Chọn ngày nhận dự kiến</string>
    <string name="errorDate">Ngày dự kiến phải lớn hơn ngày hiện tại</string>
    <string name="errorDate2">Chọn ngày không hợp lệ</string>
    <string name="cart">Giỏ hàng của tôi</string>
    <string name="tv_cartLogin">Hãy đăng nhập để dùng tính năng này nhé</string>
    <string name="tv_numProDetail">Số lượng còn lại của sản phẩm là %1$s</string>
    <string name="tv_numError">Vui lòng chọn số lượng lớn hơn 0</string>
    <string name="tv_sum">Tổng tiền:</string>
    <string name="tv_checkOut">Đặt hàng</string>
    <string name="add_CDsuccess">Đã thêm vào giỏ hàng</string>
    <string name="inventNum">Số dư sản phẩm không đủ</string>
    <string name="delete_Success">Đã xóa sản phẩm khỏi giỏ hàng</string>
    <string name="dialog_remove">Bạn muốn xóa sản phẩm này?</string>
    <string name="sum_price">0đ</string>
    <string name="tv_cartEmpty">Giỏ hàng chưa có sản phẩm</string>
    <string name="mess_logOut">Bạn có thực sự muốn đăng xuất?</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="header_name">Chào bạn</string>
    <string name="header_username">Tên đăng nhập</string>
    <string name="account_order">Đơn hàng</string>
    <string name="account_changepass">Đổi mật khẩu</string>
    <string name="account_help">Trợ giúp</string>
    <string name="account_about">About</string>
    <string name="tv_currentPass">Mật khẩu cũ</string>
    <string name="tv_newPass">Mật khẩu mới</string>
    <string name="tv_confirmPass">Xác nhận mật khẩu mới</string>
    <string name="account_empty">Vui lòng không bỏ trống</string>
    <string name="account_errorConfirmPw">Xác nhận mật khẩu mới không đúng</string>
    <string name="account_errorCurrentPw">Mật khẩu cũ không đúng</string>
    <string name="account_changePwFail">Thay đổi mật khẩu thất bại</string>
    <string name="account_changePwSuccess">Thay đổi mật khẩu thành công</string>
    <string name="title_adress">Quận/huyện</string>
    <string name="title_address2">Phường/xã</string>
    <string name="title_address3">Địa chỉ</string>
    <string name="btn_action_pc">Xác nhận</string>
    <string name="btn_cancel">Hủy</string>
    <string name="tv_nametitle">Đơn mua</string>
    <string name="tv_titleOrder">Đơn hàng</string>
    <string name="title_idCart">Mã đơn hàng:</string>
    <string name="title_Bookdate">Ngày đặt hàng:</string>
    <string name="title_dateReceive">Ngày dự kiến:</string>
    <string name="title_status">Trạng thái:</string>
    <string name="title_price">Tổng tiền:</string>
    <string name="param_price"><dev>%1$s</dev></string>
    <string name="tv_rcvDiscout">Khuyến mãi khủng</string>
    <string name="tv_rcvNew">Sản phẩm mới nhất</string>
    <string name="tv_rcvGood">Sản phẩm giá tốt</string>
    <string name="see_all">Xem thêm</string>
    <string name="tv_titleBrand">Hãng sản xuất</string>
    <string name="title_product">Sản phẩm</string>
    <string name="title_priceSearch">Giá từ</string>
    <string name="title_priceSearch2">Đến</string>
    <string name="title_introduce">Giới thiệu</string>
    <string name="title_contact">Thông tin liên hệ</string>
    <string name="order_detail">Chi tiết đơn đặt hàng</string>
    <string name="error_getCart">Không lấy được dữ liệu thông tin đơn hàng </string>
    <string name="error_getList">Không lấy được dữ liệu sản phẩm của đơn hàng</string>
    <string name="tv_infor2">Thông tin nhận hàng</string>
    <string name="tv_nameShipper">Họ tên người giao:</string>
    <string name="tv_phoneShipper">Số điện thoại người giao:</string>
    <string name="tv_idOrder">Mã đơn hàng:</string>
    <string name="tv_timeOrder">Thời gian đặt hàng:</string>
    <string name="tv_intendTime">Thời gian nhận dự kiến:</string>
    <string name="tv_deliveryTime">Thời gian giao hàng:</string>
    <string name="title_orderCline">Theo dõi đơn hàng</string>
    <string name="payment_methods">Thanh toán khi nhận hàng (COD)</string>
    <string name="ad_nav1_mainStaff">Quản lý nhân viên</string>
    <string name="ad_nav2_mainProduct">Quản lý nhập liệu</string>
    <string name="ad_nav3_mainOrder">Quản lý đơn hàng</string>
    <string name="ad_nav4_statistics">Thống kê</string>
    <string name="ad_nav4_mainLogout">Đăng xuất</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tv_staff_manage">Quản lý nhân viên</string>
    <string name="tv_brand_manage">Quản lý hãng sản xuất</string>
    <string name="tv_productType_manage">Quản lý loại sản phẩm</string>
    <string name="tv_product_manage">Quản lý sản phẩm</string>
    <string name="tv_brand_id">Mã hãng</string>
    <string name="tv_brand_name">Tên hãng</string>
    <string name="tv_brand_email">Email</string>
    <string name="tv_brand_phone">Số điện thoại</string>
    <string name="tv_brand_describe">Mô tả</string>
    <string name="tv_save">Cập nhật</string>
    <string name="tv_ship">Gửi hàng</string>
    <string name="tv_toolbar_listBrand">Danh sách hãng sản xuất</string>
    <string name="tv_toolbar_nameBrand">Cập nhật hãng sản xuất</string>
    <string name="tv_toolbar_insertBrand">Thêm hãng sản xuất</string>
    <string name="tv_find_nameBrand">Tìm kiếm theo tên hãng sản xuất</string>
    <string name="UpdateBrandError">Cập nhật thất bại</string>
    <string name="UpdateBrandSuccess">Cập nhật thành công</string>
    <string name="RemoveBrandFail">Bạn không thể xóa hãng sản xuất này</string>
    <string name="AllRemoveBrand">Bạn có chắc chắn muốn xóa hãng sản xuất này?</string>
    <string name="RemoveBrandSuccess">Xóa thành công</string>
    <string name="tv_insert">Thêm mới</string>
    <string name="tv_insert_success">Thêm mới thành công</string>
    <string name="tv_insert_fail">Thêm mới thất bại</string>
    <string name="BrandId_exist">Mã hãng đã tồn tại</string>
    <string name="Image_empty">Vui lòng chọn hình ảnh</string>
    <string name="tv_find_namePT">Tìm kiếm theo mã loại sản phẩm</string>
    <string name="RemovePTFail">Bạn không thể xóa loại sản phẩm này</string>
    <string name="AllowRemovePT">Bạn có chắc chắn muốn xóa loại sản phẩm này?</string>
    <string name="tv_toolbar_namePT">Cập nhật loại sản phẩm</string>
    <string name="tv_toolbar_insertPT">Thêm loại sản phẩm</string>
    <string name="tv_PT_id">Mã loại sản phẩm</string>
    <string name="tv_PT_name">Tên loại sản phẩm</string>
    <string name="id_pt_exist">Mã loại sản phẩm đã tồn tại</string>
</resources>