<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/lnl_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            style="@style/style_imvlogin"
            android:layout_marginTop="@dimen/_40sdp" />

        <TextView
            style="@style/style_textview_login"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/tv_username" />

        <EditText
            android:id="@+id/rgt_username"
            style="@style/style_edit_login"
            android:hint="@string/hint_edtusername" />

        <TextView
            style="@style/style_textview_login"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/tv_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rgt_password"
                style="@style/style_edit_login"
                android:hint="@string/hint_edtpassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegister"
            style="@style/style_btnlogin"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:text="@string/tv_register"
            android:textSize="@dimen/_13sdp" />


    </LinearLayout>

</RelativeLayout>