<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/lnl_checkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_above="@id/lnl_bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_checkout"
                style="@style/style_imv_icon"
                android:background="@drawable/ic_baseline_arrow_back_ios_new_24" />

            <TextView
                android:id="@+id/name_productType"
                style="@style/style_textview_weight"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/checkout"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lnl_bottom"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/lnl_checkout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lnl_bottom"
        android:orientation="vertical">

        <TextView
            style="@style/style_textview_login"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/tv_infor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/tv_name" />

            <EditText
                android:id="@+id/edt_nameReceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:hint="@string/pf_hintName"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_105sdp"
                android:layout_height="@dimen/_40sdp"
                android:textSize="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/tv_phone" />

            <EditText
                android:id="@+id/edt_phoneReceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:hint="@string/pf_hintPhone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/tv_email_receive" />

            <EditText
                android:id="@+id/edt_emailReceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:hint="@string/hint_email"/>
        </LinearLayout>

        <TextView
            style="@style/style_textview_login"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_11sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/tv_address" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <EditText
                android:id="@+id/edt_addressReceive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:textSize="@dimen/_11sdp"
                android:maxLength="100"
                android:hint="@string/pf_hintAddress"
                android:background="@drawable/boder_rectangle2"
                android:padding="@dimen/_8sdp"
                android:gravity="top"
                android:inputType="text|textMultiLine" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/tv_dateReceive" />

            <EditText
                android:id="@+id/edt_dateReceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:textColor="@color/black"
                android:enabled="false"
                android:textSize="@dimen/_11sdp"
                android:hint="@string/hint_dateReceive"/>

            <ImageView
                android:id="@+id/imv_calendar"
                style="@style/style_imv_icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_minus30sdp"
                android:background="@drawable/ic_baseline_calendar_month_24" />
        </LinearLayout>

        <TextView
            style="@style/style_textview_login"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/tv_product_checkout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_checkout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350sdp"
            android:layout_marginTop="@dimen/_10sdp" />

    </LinearLayout>

    </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@color/gray"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nameMoney"
            style="@style/style_textview_login2"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/tv_sum"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/sum_cartMoney2"
            style="@style/style_textview_login3"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/red"
            android:text="@string/sum_price"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/btn_checkOut2"
            style="@style/style_btnlogin"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/tv_checkOut2"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

</RelativeLayout>