<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/view_Account"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_changePw"
        style="@style/style_imv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_arrow_back_ios_new_24" />

    <ImageView
        android:id="@+id/logo"
        style="@style/style_imvlogin"
        android:layout_marginTop="@dimen/_5sdp"/>

    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/style_textview_login"
        android:text="@string/tv_currentPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_currentPass"
            style="@style/style_edit_login"
            android:hint="@string/hint_edtpassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="@dimen/_30sdp"
        style="@style/style_textview_login"
        android:text="@string/tv_newPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_newPass"
            style="@style/style_edit_login"
            android:hint="@string/hint_edtpassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="@dimen/_30sdp"
        style="@style/style_textview_login"
        android:text="@string/tv_confirmPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Pass2"
            style="@style/style_edit_login"
            android:hint="@string/hint_edtpassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnChange"
        style="@style/style_btnlogin"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:text="@string/pf_btnSave"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>